--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
-    "expo": "~47.0.12",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "expo": "^47.0.13",
     "expo-checkbox": "~2.2.2",
+    "expo-cli": "^6.3.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-check-box": "^2.1.7"
+    "react-native-check-box": "^2.1.7",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
